name:                eta2048
version:             0.1.0.0
synopsis:            2048 game clone using Yampa & JavaFX
description:

  A simple game clone of a popular 2048 game using Yampa FRP
  library and JavaFX for graphics.
  .
  Use the arrow keys to slide the rows or columns of the board and try to
  survive for as long as possible. When there is no more move possible you will
  be presented with a game over message for 5 seconds and the game will be
  restarted after that.

license:             MIT
license-file:        LICENSE
author:              Rahul Muttineni <rahulmutt@gmail.com>
                     Konstantin Saveljev <konstantin.saveljev@gmail.com>
maintainer:          Rahul Muttineni <rahulmutt@gmail.com>
                     Konstantin Saveljev <konstantin.saveljev@gmail.com>
copyright:           (C) 2015-2016 Rahul Muttinei, Konstantin Saveljev, Josh Kirklin, Maia Werbos
category:            Game
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >= 1.18
homepage:            https://github.com/rahulmutt/eta-2048
bug-reports:         https://github.com/rahulmutt/eta-2048/issues

executable eta2048
  main-is:             Main.hs
  other-modules:       Game
                     , GameLogic
                     , GameModel
                     , Rendering
                     , Types
                     , JavaFX
                     , JavaFX.FRP
                     , JavaFX.Main
                     , JavaFX.Picture
                     , JavaFX.Rendering
                     , JavaFX.Types
  build-depends:       base >=4.7 && <4.9
                     , random
                     , Yampa == 0.10.*
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -O2